--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-parallax-tilt": "^1.7.209"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-3d": "^1.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
